--- a/main.css
+++ b/main.css
@@ -48,33 +48,43 @@ html {
 }
 
 .bookmrks {
+  /* | GRID |
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 5px;
-  margin: 2.5% auto;
+  */
+  display: flex;
+  flex-flow: row wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: auto 0;
   width: 100%;
 }
 
 .bookmrks__container {
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 2% 5%;
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  margin: 0.2em;
+  padding: 0.8em;
   height: fit-content;
 }
 
 .bookmrks__header {
   color: #BF2CB8;
   font-size: 1em;
-  margin: 0.75em 1em;
+  margin: 0 auto 0.2em auto;
 }
 
 .bookmrks__nav {
   display: flex;
   flex-flow: column;
-  margin: 0 1em;
 }
 
 .bookmrks__link {
   color: var(--main-color);
   text-decoration: none;
   text-transform: uppercase;
+  width: fit-content;
 }
