--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ figure {
 	flex-direction: column;
 	margin: 0.3em;
 	padding: 0.6em;
-	height: fit-content;
+	height: max-content;
 }
 
 .bookmrks__header {
