--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ html {
 	color: var(--main-color);
 	display: block;
 	font-family: "VHS";
+	font-size: calc(0.8em + 0.8vh);
 	height: 100%;
 	width: 100%;
 }
@@ -148,7 +149,7 @@ figure {
 	color: var(--main-color);
 	text-decoration: none;
 	text-transform: uppercase;
-	width: fit-content;
+	width: max-content;
 }
 
 .bookmrks__link:hover {
