--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ figure {
 .calc__row input {
 	background-color: rgba(0, 0, 0, 0.5);
 	border: 2px solid var(--main-color);
-	border-radius: 2px;
+	border-radius: 0.3em;
 	color: var(--main-color);
 	font-family: "VHS";
 	font-size: 1em;
@@ -106,13 +106,13 @@ figure {
 
 .bookmrks {
 	/* | GRID |
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 5px;
-  */
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 5px;
+	*/
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-between;
+	justify-content: center;
 	margin: auto 0;
 	width: 100%;
 }
@@ -122,9 +122,9 @@ figure {
 	border-radius: 2px;
 	box-shadow: 0 0 0 2px var(--main-color);
 	display: flex;
-	flex: 1 0 auto;
+	flex: 0 0 auto;
 	flex-direction: column;
-	margin: 0.3em;
+	margin: 0.4em;
 	padding: 0.6em;
 	height: max-content;
 }
