--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
 }
 
 html {
-	background-color: var(--back-color);
+	background-color: red;
 	color: var(--main-color);
 	display: flex;
 	flex-flow: column;
